# smart-RSS

./: .gitignore  Dockerfile  LICENSE  README.md  app.py  feeds.json  pyproject.toml
docs/: home.html  index.html  settings.html
docs/blog/: 0.html  1.html  2.html
static/: styles.css
templates/: blog.html  custom_theme.html  home.html  nav.html  settings.html
